# accessor_universal_test

./: .gitignore  CMakeLists.txt  README.md
datasets/: README.md
datasets/dot_v1/: README.md  manifest.csv  validation_n1048576.csv
include/: dot_dataset.hpp  memory_accessor.hpp
results/: README.md  cublas_accuracy_signed_20260722T173746Z.csv  cublas_performance_20260722T173746Z.csv  cublas_sdot_n134217728_20260722T180721Z.ncu-rep  cublas_sdot_n134217728_20260722T180721Z_ncu_details.txt
results/001_cublas_baseline/: README.md  cublas_accuracy_positive_20260722T173746Z.csv  slurm-420011.out
results/002_cublas_sdot_n2p27_profile/: README.md  cublas_sdot_n134217728_20260722T180721Z_benchmark.csv  cublas_sdot_n134217728_20260722T180721Z_ncu_raw.csv  slurm-420016.out
results/003_accessor_dot/: README.md  slurm-420475.out  slurm-420477.out  slurm-420478.out
results/003_accessor_dot/run_20260723T145431Z/: environment.txt
results/003_accessor_dot/run_20260723T150227Z/: environment.txt  run_manifest.txt
results/003_accessor_dot/run_20260723T150439Z/: accuracy.csv  accuracy_comparison.csv  cuda_resource_usage.txt  environment.txt  performance_samples.csv  performance_summary.csv  profile_summary.csv  run_manifest.txt  sass.txt
results/003_accessor_dot/run_20260723T150439Z/profile/accessor_f32_f32/: accessor_f32_f32_n134217728_20260723T150439Z.ncu-rep  accessor_f32_f32_n134217728_20260723T150439Z_metadata.csv  accessor_f32_f32_n134217728_20260723T150439Z_ncu_details.txt  accessor_f32_f32_n134217728_20260723T150439Z_ncu_raw.csv
results/003_accessor_dot/run_20260723T150439Z/profile/accessor_f64_f32/: accessor_f64_f32_n134217728_20260723T150439Z.ncu-rep  accessor_f64_f32_n134217728_20260723T150439Z_metadata.csv  accessor_f64_f32_n134217728_20260723T150439Z_ncu_details.txt  accessor_f64_f32_n134217728_20260723T150439Z_ncu_raw.csv
results/003_accessor_dot/run_20260723T150439Z/profile/raw_f32/: raw_f32_n134217728_20260723T150439Z.ncu-rep  raw_f32_n134217728_20260723T150439Z_metadata.csv  raw_f32_n134217728_20260723T150439Z_ncu_details.txt  raw_f32_n134217728_20260723T150439Z_ncu_raw.csv
results/003_accessor_dot/run_20260723T150439Z/profile/raw_f64/: raw_f64_n134217728_20260723T150439Z.ncu-rep  raw_f64_n134217728_20260723T150439Z_metadata.csv  raw_f64_n134217728_20260723T150439Z_ncu_details.txt  raw_f64_n134217728_20260723T150439Z_ncu_raw.csv
scripts/: profile_cublas_baseline.sh  profile_cublas_sdot_h200.sbatch  run_accessor_dot_experiment.sh  run_accessor_dot_h200.sbatch  run_cublas_baseline.sh
src/: accessor_dot_bench.cu  dot_bench.cu
tests/: memory_accessor_test.cpp
tools/: inspect_dot_dataset.cpp  summarize_accessor_results.py  summarize_ncu.py
